# RL_game_NocVedcu

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: config.yaml  day01_prices_weather.csv  day01_prices_weather_csv_preview__first_20_rows_shown_in_the_app_.csv  generate_data.ipynb  week01_prices_weather.csv
src/: run_gui.py  simulation.ipynb
src/thermal_toy/: dynamics.py  env.py  io.py  reward.py  simulation.py
src/thermal_toy/devices/: __init__.py  base.py  battery.py  heat_pump_bidir.py  pv.py  resistive.py
src/thermal_toy/engine/: engine.py  types.py
src/thermal_toy/gui/: __init__.py  app_tk.py  assets.py  chart_sprites copy.py  chart_sprites.py  config.py  house_spline_runtime.py  options.py  output_splines.py  sandbox.py  sprite_factory.py  theming.py  view_charts.py
src/thermal_toy/runtime/: __init__.py  session.py
