# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-toy-rl"
version = "0.1.0"
description = "Tiny single-zone thermal toy environment for RL experiments"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["thermal_toy*"]
